This commit is for documentation purposes. From here and on, I'm abandoning the approach of not using JPA relationships between entities (OneToMany, ManyToOne). Up till now, I had been trying to handle everything only using the entities' ids, but a series of bizarre, inexplicable and impossible-to-debug errors have persuaded me otherwise. The idea is to get rid of those errors by using the classical approach to JPA entity management.