@@ -4,23 +4,20 @@ import com.irostec.boardgamemanager.application.boundary.api.jpa.entity.BoardGam
 import com.irostec.boardgamemanager.application.boundary.api.jpa.entity.Family;
 import com.irostec.boardgamemanager.application.boundary.api.jpa.repository.BoardGameFamilyRepository;
 import com.irostec.boardgamemanager.application.boundary.api.jpa.repository.FamilyRepository;
+import com.irostec.boardgamemanager.application.boundary.createandincludeboardgamefrombgg.components.EntityCollectionProcessor;
+import com.irostec.boardgamemanager.application.boundary.createandincludeboardgamefrombgg.components.filters.BoardGameFamilyCollectionFilter;
+import com.irostec.boardgamemanager.application.boundary.createandincludeboardgamefrombgg.components.filters.FamilyCollectionFilter;
 import com.irostec.boardgamemanager.application.core.shared.bggapi.output.Link;
-import com.irostec.boardgamemanager.common.utility.PartialFunctionDefinition;
+import com.irostec.boardgamemanager.common.error.BoundaryException;
 
-import io.vavr.control.Either;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collection;
-import java.util.function.Function;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.irostec.boardgamemanager.common.utility.Functions.zipper;
 import static com.irostec.boardgamemanager.common.utility.Functions.wrapWithErrorHandling;
-import static com.irostec.boardgamemanager.common.utility.Functions.processItems;
-import static com.irostec.boardgamemanager.common.utility.Functions.mapAndProcess;
 
 @Component
 @AllArgsConstructor
@@ -28,35 +25,22 @@ public class FamilyService {
 
     private final FamilyRepository familyRepository;
     private final BoardGameFamilyRepository boardGameFamilyRepository;
+    private final FamilyCollectionFilter familyCollectionFilter;
+    private final BoardGameFamilyCollectionFilter boardGameFamilyCollectionFilter;
+    private final EntityCollectionProcessor entityCollectionProcessor;
 
-    public <E> Either<E, Collection<BoardGameFamily>> saveFamilies(
-        Long boardGameId,
-        Long dataSourceId,
-        Supplier<Collection<Link>> linksSupplier,
-        Function<Link, String> linkToKey,
-        Function<Throwable, E> exceptionToError
-    ) {
+    private Collection<Family> saveFamilies(Long dataSourceId, Collection<Link> links)
+    throws BoundaryException {
 
-        Either<E, PartialFunctionDefinition<Link, Family>> partialFunctionDefinitionContainer =
-            PartialFunctionDefinition.of(
-                linksSupplier.get(),
-                links -> wrapWithErrorHandling(
-                    () -> familyRepository.findByDataSourceIdAndExternalIdIn(
-                        dataSourceId,
-                        links.stream().map(linkToKey).collect(Collectors.toList())
-                    ),
-                    exceptionToError
-                ),
-                linkToKey,
-                Family::getExternalId
+        EntityCollectionProcessor.PartialFunctionDefinition<Link, Family> partialFunctionDefinition =
+            entityCollectionProcessor.buildPartialFunctionDefinition(
+                links, dataSourceId, familyCollectionFilter, Link::id, Family::getExternalId
             );
 
-        Either<E, Collection<Family>> familiesContainer =
-            partialFunctionDefinitionContainer.flatMap(partialFunctionDefinition ->
-                processItems(
-                    partialFunctionDefinition,
-                    newInputs -> mapAndProcess(
-                        newInputs,
+        Collection<Family> newFamilies = wrapWithErrorHandling(() ->
+            familyRepository.saveAll(
+                partialFunctionDefinition.getUnmappedDomain().stream()
+                    .map(
                         link -> {
 
                             Family family = new Family();
@@ -66,37 +50,60 @@ public class FamilyService {
 
                             return family;
 
-                        },
-                        familyRepository::saveAll,
-                        exceptionToError
-                    ),
-                    Either::right,
-                    zipper((newInputs, newItems) -> newItems),
-                    zipper((existingInputs, existingItems) -> existingItems),
-                    (newItems, existingItems) ->
-                        Stream.concat(newItems.stream(), existingItems.stream()).collect(Collectors.toList())
-                )
+                        }
+                    )
+                    .toList()
+            )
+        );
+
+        Collection<Family> existingFamilies = partialFunctionDefinition.getImage();
+
+        return Stream.concat(newFamilies.stream(), existingFamilies.stream()).toList();
+
+    }
+
+    private Collection<BoardGameFamily> saveBoardGameFamilies(Long boardGameId, Collection<Family> families)
+    throws BoundaryException {
+
+        EntityCollectionProcessor.PartialFunctionDefinition<Family, BoardGameFamily> partialFunctionDefinition =
+            entityCollectionProcessor.buildPartialFunctionDefinition(
+                families, boardGameId, boardGameFamilyCollectionFilter, Family::getId, BoardGameFamily::getFamilyId
             );
 
-        Either<E, Collection<BoardGameFamily>> boardGameMechanicsContainer =
-            familiesContainer.flatMap(
-                families -> mapAndProcess(
-                    families,
-                    family -> {
+        Collection<BoardGameFamily> newBoardGameFamilies = wrapWithErrorHandling(() ->
+            boardGameFamilyRepository.saveAll(
+                partialFunctionDefinition.getUnmappedDomain().stream()
+                    .map(
+                        family -> {
 
-                        BoardGameFamily boardGameFamily = new BoardGameFamily();
-                        boardGameFamily.setBoardGameId(boardGameId);
-                        boardGameFamily.setFamilyId(family.getId());
+                            BoardGameFamily boardGameFamily = new BoardGameFamily();
+                            boardGameFamily.setBoardGameId(boardGameId);
+                            boardGameFamily.setFamilyId(family.getId());
 
-                        return boardGameFamily;
+                            return boardGameFamily;
 
-                    },
-                    boardGameFamilyRepository::saveAll,
-                    exceptionToError
-                )
-            );
+                        }
+                    )
+                    .toList()
+            )
+        );
 
-        return boardGameMechanicsContainer;
+        Collection<BoardGameFamily> existingBoardGameFamilies = partialFunctionDefinition.getImage();
+
+        return Stream.concat(newBoardGameFamilies.stream(), existingBoardGameFamilies.stream()).toList();
+
+    }
+
+    @Transactional(rollbackFor = Throwable.class)
+    public Collection<BoardGameFamily> saveBoardGameFamilies(
+        Long boardGameId,
+        Long dataSourceId,
+        Collection<Link> links
+    ) throws BoundaryException {
+
+        Collection<Family> families = this.saveFamilies(dataSourceId, links);
+
+        return saveBoardGameFamilies(boardGameId, families);
 
     }
 
